fixed songinfo overflow

--- a/stylesheets/mjs.css
+++ b/stylesheets/mjs.css
@@ -65,6 +65,7 @@ section {
 }
 
 #songinfo {
+    height: 100%;
     border-right: 1px solid darkgray;
 }
 
